# CyberZen

./: .gitignore  CURRENT_CONTEXT.md  IMPLEMENTATION_SPLIT.md  PROJECT_TRACKER.md  README.md  TODO.md  package.json  sentinel-platform-spec.md  vercel.json
apps/github-action/: action.yml  package.json
apps/github-action/examples/: security-gate.yml
apps/github-action/src/: check-run.ts  index.test.ts  (+2 more)
apps/vscode-extension/: package.json
apps/web/: .cta.json  .gitignore  README.md  index.html  package.json  vite.config.ts
docs/: env-vars.md  foundation-decisions.md
services/: README.md
services/agent-core/: README.md  pyproject.toml
services/agent-core/src/sentinel_agent_core/: __init__.py  app.py
services/agent-core/src/sentinel_agent_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/agent-core/src/sentinel_agent_core/analyzers/: __init__.py  agentic_workflow.py  import_graph.py  llm_callchain.py
services/agent-core/tests/: test_agentic_workflow.py  test_import_graph.py  test_llm_callchain.py
services/breach-intel/: README.md
services/event-gateway/: README.md
services/sandbox-manager/: README.md  conftest.py  pyproject.toml
services/sandbox-manager/src/sentinel_sandbox/: __init__.py  app.py  executor.py  models.py  poc.py
services/sandbox-manager/src/sentinel_sandbox/exploits/: __init__.py  auth_bypass.py  base.py  cve_patterns.py  http_probe.py  injection.py  llm_injection.py
services/sandbox-manager/tests/: test_classify_outcome.py  test_executor.py  test_exploits.py  test_llm_injection.py  test_poc.py
services/sbom-ingest/: README.md  pyproject.toml
services/sbom-ingest/src/sentinel_sbom_ingest/: __init__.py  cli.py  models.py  parser.py
services/sbom-ingest/tests/: test_parser.py
services/shared/: README.md
(+526 files in other folders)
