[project]
name = "sentinel-agent-core"
version = "0.1.0"
description = "Python orchestration scaffold for the Sentinel agent core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.117,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn>=0.37,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
