[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-sandbox-manager"
version = "0.1.0"
description = "Sentinel exploit validation sandbox — HTTP-based exploit execution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_sandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
