[project]
name = "sentinel-sbom-ingest"
version = "0.1.0"
description = "Repository inventory extraction for Sentinel SBOM snapshots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

